--- a/Resources/ru.lproj/Localizable.strings
+++ b/Resources/ru.lproj/Localizable.strings
@@ -14,7 +14,7 @@
 "open_another_wallet" = "Открыть другой кошелек";
 "seed_capture_warning" = "Вы сделали скриншот контрольной фразы! Хранение скриншота на вашем телефоне подвергает риску все ваши средства! Настоятельно рекомендуется удалить скриншот из фотоальбома.";
 "seed_prhase" = "Контрольная фраза";
-"inpur_seed" = "Введите вашу контрольную фразу";
+"input_seed" = "Введите вашу контрольную фразу";
 "confirm_seed_text" = "Что бы убедиться что вы правильно записали вашу контрольную фразу, пожалуйста введите нужные слова в поля снизу";
 "display_seed" = "Ваша контрольная фраза является ключом для доступа ко всем вашим средствам. Храните фразу в защищенном месте. В случае потери контрольной фразы, вы не сможете восстановить доступ к вашим средствам.";
 "intro_seed_main" = "Создать новый кошелек и новую контрольную фразу.Если вы потеряете доступ к своему устройству, для восстановления кошелька вам понадобится контрольная фраза.Никогда не сохраняйте контрольную фразу в связке ключей или в программах по управлению паролями, а также в файлах или удаленных папках.";
