--- a/Resources/th.lproj/Localizable.strings
+++ b/Resources/th.lproj/Localizable.strings
@@ -14,7 +14,7 @@
 "open_another_wallet" = "เปิดกระเป๋าอื่น";
 "seed_capture_warning" = "คุณได้ทำการถ่ายภาพหน้าจอกลุ่มคำลับของคุณ การบันทึกรูปหน้าจอไว้บนโทรศัพย์ของคุณนั้นจะทำให้ทรัพย์สินของคุณมีความเสี่ยง ขอแนะนำอย่างยิ่งให้ลบภาพการบันทึกหน้าจอออกจากคลังภาพในโทรศัพย์ของคุณ";
 "seed_prhase" = "กลุ่มคำลับ";
-"inpur_seed" = "พิมพ์กลุ่มคำลับของคุณ";
+"input_seed" = "พิมพ์กลุ่มคำลับของคุณ";
 "confirm_seed_text" = "เพื่อให้แน่ใจว่าคุณได้ทำการเขียนกลุ่มคำลับถูกต้อง กรุณากรอกคำตามลำดับด้านล่างนี้";
 "display_seed" = "กลุ่มคำลับเหล่านี้ของคุณเป็นกุญแจเพื่อที่จะเข้าถึงทรัพย์สินในกระเป๋าของคุณ กรุณาเขียนกลุ่มคำลับนี้ลงกระดาษเก็บไว้ในที่ปลอดภัยอย่างตู้เซฟหรือห้องนิรภัย หากไม่มีกลุ่มคำลับเหล่านี้คุณจะไม่สามารถกู้คืนทรัพย์สินของคุณได้";
 "intro_seed_main" = "ในการสร้างกระเป๋าใหม่โดยการใช้งานกลุ่มคำลับนั้นเมื่อคุณทำอุปกรณ์หายคุณจำเป็นจะต้องใช้กลุ่มคำลับเหล่านี้ในการกู้กระเป๋า! อย่าได้พิมพ์กลุ่มคำลับเหล่านี้ไว้ในโปรแกรมจัดการรหัสผ่าน และอย่าเซฟไว้ในรูปแบบไฟล์ทั้งในคอมพิวเตอร์ส่วนตัวหรือออนไลน์ก็ตาม";
