--- a/Resources/vi.lproj/Localizable.strings
+++ b/Resources/vi.lproj/Localizable.strings
@@ -14,7 +14,7 @@
 "open_another_wallet" = "Mở một ví khác";
 "seed_capture_warning" = "Bạn đã chụp ảnh cụm từ hạt giống của bạn. Giữ hình ảnh trong điện thoại đặt tiền của bạn vào nguy cơ rủi ro. Chúng tôi khuyên bạn nên xóa ảnh chụp màn hình bằng tay khỏi thư viện ảnh.";
 "seed_prhase" = "Cụm từ hạt giống";
-"inpur_seed" = "Gõ cụm từ hạt giống của bạn";
+"input_seed" = "Gõ cụm từ hạt giống của bạn";
 "confirm_seed_text" = "Để đảm bảo cụm từ hạt giống được viết chính xác, vui lòng điền vào các từ cụ thể bên dưới";
 "display_seed" = "Cụm từ hạt giống của bạn là khóa truy cập vào tất cả các khoản tiền trong ví của bạn. In hoặc viết cụm từ để giữ nó an toàn hoặc trong một hầm có khóa. Nếu không có cụm từ, bạn sẽ không thể lấy lại tiền của mình.";
 "intro_seed_main" = "Tạo một ví mới bằng cách tạo một cụm từ hạt giống. Nếu bạn mất thiết bị của mình, bạn sẽ cần cụm từ hạt giống để lấy lại tiền của mình. Không bao giờ nhập cụm từ hạt giống của bạn trong móc khóa hoặc trình quản lý mật khẩu. Không bao giờ lưu nó trong hệ thống tập tin cục bộ của bạn hoặc các thư mục từ xa.";
