--- a/Resources/en.lproj/Localizable.strings
+++ b/Resources/en.lproj/Localizable.strings
@@ -480,3 +480,4 @@
 "change_settings_text_1" = "Use Face ID or enter your password to change settings";
 "change_settings_text_2" = "Use Touch ID or enter your password to change settings";
 "change_settings_text_3" = "Enter your password to change settings";
+"paste" = "Paste";
